<resources>
    <string name="app_name">MAPme</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_link">&lt;a href="http://www.adu.org.za/register.php">Register&lt;/a></string>
    <string name="forgot_link">&lt;a href="http://www.adu.org.za/register_pw.php">Forgot Password&lt;/a></string>
    <string name="adu_prompt">ADU Number</string>

    <!-- Strings related to about -->
    <string name="producedBy">PsyBlaze Technologies</string>
    <string name="producedByDate">May 2015</string>
    <string name="producedByAuthD">D. G. Smith</string>
    <string name="producedByAuthP">P. S. Sebeikin</string>

    <!-- Strings related to action toolbar -->
    <string name="about_title">About</string>
    <string name="logout_title">Logout</string>
    <string name="help_title">Help</string>
    <string name="home_title">Home</string>
    <string name="new_record_title">New Record</string>
    <string name="profile_title">Profile</string>
    <string name="history_title">History</string>

    <!-- Strings for Add Image(s) -->
    <string name="browseImage">Browse</string>
    <string name="saveImages">Save</string>
    <string name="add_image_title">Add Image(s)</string>


    <!-- Strings related to New Template -->
    <string name="sel_img">Add Image(s)*</string>
    <string name="gps">GPS*</string>
    <string name="gps_lat">Lat</string>
    <string name="gps_long">Long</string>
    <string name="gps_alt">Alt</string>
    <string name="project">Project*</string>
    <string name="date">Date*</string>
    <string name="next">Next >></string>
    <string name="submit">Submit</string>
    <string name="country">Country*</string>
    <string name="province">Province*</string>
    <string name="town">Nearest Town*</string>
    <string name="desc">Description (locality, sound, scent)*</string>
    <string name="environment">Environment</string>
    <string name="species">Species</string>
    <string name="flower">Flower?</string>
    <string name="fruit">Fruit?</string>
    <string name="number">Number Observed</string>
    <string name="nat.cul">Natural / Cultivated</string>
    <string name="growth">Growth Form</string>

    <!-- Strings for Profile activity -->
    <string name="profileTitle">Profile</string>
    <string name="profileName">Username</string>
    <string name="profileEmail">Email</string>
    <string name="profileADU"> ADU</string>
    <string name="profileCountry">Country</string>
    <string name="profileProvince">Province</string>
    <string name="profileNearestTown">Nearest Town</string>
    <string name="profileProject">Project</string>
    <string name="profileSaveBtn">Save</string>

    <string name="nameTemp">[Name]</string>
    <string name="emailTemp">[Email</string>
    <string name="aduTemp">[ADU]</string>

    <!-- Strings for Help activity and related -->
    <string name="newRec">- Creating a New Record</string>
    <string name="logReg">- Registering and Logging In</string>
    <string name="profSettings">- Profile Settings</string>
    <string name="historySettings">- Checking Submission History</string>
    <string name="map">View Map</string>
    <string name="source">Source</string>

    <!-- String related to Map Widget -->
    <string name="back">Back</string>

    <!--Strings related to History Details -->
    <string name="dateHist">Date</string>
    <string name="projectHist">Project</string>
    <string name="descHist">Description</string>
    <string name="imgHist">Images</string>
    <string name="gpsHist">GPS</string>
    <string name="countryHist">Country</string>
    <string name="provinceHist">Province</string>
    <string name="townHist">Nearest Town</string>
    <string name="numImg_desc">Displays the number of images associated with this Record.</string>
    <string name="sync_desc">Indicates whether this Record has been synced to the ADU server.</string>

    <string name="dateTemp">[Date]</string>
    <string name="projTemp">[Project]</string>
    <string name="descTemp">[Description]</string>
    <string name="imgTemp">[Images]</string>
    <string name="latTemp">[Lat]</string>
    <string name="longTemp">[Long]</string>
    <string name="countryTemp">[Country]</string>
    <string name="provinceTemp">[Province]</string>
    <string name="townTemp">[Nearest Town]</string>


</resources>
