<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
        android:title="@string/home_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_new_record"
        android:title="@string/new_record_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_history"
        android:title="@string/history_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_profile"
        android:title="@string/profile_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_logout"
        android:title="@string/logout_title"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/action_help"
        android:title="Help"
        app:showAsAction="never">
    </item>
</menu>