<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="psyblaze.mapme.HistoryDetailActivity"
    android:orientation="vertical"
    android:paddingBottom="15pt">
    <android.support.v7.widget.Toolbar
        android:id="@+id/mapme_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:src="@drawable/ic_del_img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:background="?selectableItemBackground"
            android:id="@+id/delButton" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mapme_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/mapme_toolbar"
            android:paddingTop="10dp"
            android:id="@+id/root">
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/mapme_toolbar"
                android:id="@+id/date_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_weight="0.3"
                    android:text="@string/dateTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/date_layout"
                android:id="@+id/project_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/proj"
                    android:layout_weight="0.3"
                    android:text="@string/projTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/project_layout"
                android:id="@+id/desc_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc"
                    android:layout_weight="0.3"
                    android:text="@string/descTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/desc_layout"
                android:id="@+id/img_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imgHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:maxLines="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgs"
                    android:layout_weight="0.3"
                    android:text="@string/imgTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/img_layout"
                android:id="@+id/coord_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Latitude"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gps_lat"
                    android:text="@string/latTemp" />
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/coord_layout"
                android:id="@+id/long_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Longitude"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gps_long"
                    android:text="@string/longTemp"
                    android:layout_weight="0.2"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/long_layout"
                android:id="@+id/country_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countryHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/country"
                    android:layout_weight="0.3"
                    android:text="@string/countryTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/country_layout"
                android:id="@+id/province_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/provinceHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/province"
                    android:layout_weight="0.3"
                    android:text="@string/provinceTemp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/linLayoutForLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/province_layout"
                android:id="@+id/town_layout"
                android:weightSum="1">
                <TextView
                    style="@style/linLayoutForHistoryDetailsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/townHist"
                    android:layout_weight="0.7"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/town"
                    android:layout_weight="0.3"
                    android:text="@string/townTemp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
