<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mapme_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10pt">

            <TextView
                style="@style/labelsAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/producedBy"
                android:gravity="center_horizontal"/>
            <TextView
                style="@style/labelsAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/producedByDate"
                android:gravity="center_horizontal"/>
            <TextView
                style="@style/labelsAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/producedByAuthD"
                android:gravity="center_horizontal"/>
            <TextView
                style="@style/labelsAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/producedByAuthP"
                android:gravity="center_horizontal"/>

            <ImageView
                android:layout_width="189dp"
                android:layout_height="206dp"
                android:src="@drawable/mapme"
                android:layout_gravity="center"
                android:paddingTop="5pt"/>
            <ImageView
                android:layout_width="168dp"
                android:layout_height="131dp"
                android:src="@drawable/psyblaze"
                android:layout_gravity="center"
                android:paddingTop="5pt" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
