<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="psyblaze.mapme.NewRecordActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mapme_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sel_img"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:src="@drawable/ic_add_img"/>

        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps_lat"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/gps_lat"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps_long"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/gps_long"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps_alt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/gps_alt"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:id="@+id/project_spinner"></Spinner>

        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
