<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="psyblaze.mapme.NewRecordActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mapme_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_below="@+id/mapme_toolbar">

        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/name_layout"
            android:padding="10px">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profName"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/email_layout"
            android:padding="15px">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileEmail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profEmail"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ADU_layout"
            android:padding="15px">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileADU"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profADU"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/country_layout">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileCountry"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profCountry"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/province_layout">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileProvince"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profProvince"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/nearestTown_layout">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileNearestTown"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profNearestTown"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            style="@style/linLayoutForLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/project_layout">
            <TextView
                style="@style/labelsNewRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileProject"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:id="@+id/profProject"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveImages"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
